Figured out with fradle task and added StringBuilders